--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "~1.9.1",
     "node-cache": "^5.1.2",
     "plotly.js": "^2.26.1",
+    "puppeteer": "^23.4.1",
     "quadprog": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
