--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "ts-node server/www.ts",
+    "prod": "cross-env NODE_ENV=production ts-node server/www.ts",
     "dev": "cross-env PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -26,7 +27,7 @@
     "compute-covariance": "^1.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "lodash-transpose": "^0.2.1",
     "morgan": "~1.9.1",
